- Modified NotificationService, related classes and JADE internals to handle RECONNECTED and LEADERSHIP_ACQUIRED container events 
- Enhanced MainReplicationService with support for application specific checks on connectivity status when a Main Container replica is considered dead due to a long disconnection 

Behaviours
- Added WrapperBehaviour to allow modifying behaviours methods on the fly
- In Ticker and Waker behaviour added restart in stop method

Content Language and Ontologies
- Registered java classes for primitive schemas. Added support for java collection aggregates to BasicOntology.toObject().
- Added adjustPrimitiveValues() method in BasicOntology to automatically convert primitive values according to the required type
- Fixed Set management in AbsHelper and BCReflectiveIntrospector.
- Added isAssignableFrom() method to ObjectSchema to performs a structural compatibility check on schemas

DF
- Modified DFService to set max-result to -1 (infinite) by default when creating a DF subscription message

Interaction Protocols
- Modified SSResponderDispatcher to initialize the conversation-id if not set and manage cases where createResponder() returns null
- Modified SubscriptionInitiator to properly set the reply-with field in the CANCEL message when a response to the CANCEL message is expected

Others
- Added class jade.util.leap.HashSet; 
- Modified build process to recreate parsers only if both the JAVACC_HOME variable is set AND the makeParsers property is set to true in the build.properties file


BUG-FIXES:
- Fixed bug in jade.jar manifest: Replaced backslash with slash in Class-Path property
- Fixed bug in BasicOntology serialization
- Fixed bug on set of AbsObject: duplication of attribute names in case of multiple set of same attribute
- Fixed bug on container shutdown: the shutdown of a peripheral container living in the same VM of a main container used to stop the multicast listener of the main container.